<resources>
    <string name="app_name">Laza</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_txt">Create your individual and unique style and look amazing everyday.</string>
    <string name="look_good_feel_good">Look Good, Feel Good</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="get_started">Let’s Get Started</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create an Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_last_name">Last Name</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_data_to_continue">Please enter your data to continue</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="termsAndConditions">By connecting your account confirm that you agree</string>
    <string name="term_and_condition">with out Term and Condition</string>
    <string name="arrowCd">arrowCd</string>
    <string name="facebook_icon_cd">FacebookIconCd</string>
    <string name="or">OR</string>
    <string name="forgot_password_fragment">Forgot Password</string>
    <string name="please_write_your_email_to_receive_a_confirmation_code_to_set_a_new_password">Please write your email to receive a Link \n to set a new password.</string>
    <string name="send">Send</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="web_client_id">820533389903-kv1rntb9dgj71msvuira54d7lgghcfus.apps.googleusercontent.com</string>
    <string name="twitter_api_key">KZaIlExxhn0TrSwwRwenaIZaW</string>
    <string name="twitter_api_secret">qP7uzXORTvTO0oGVy9jYXBjTvzhhfkRnG4YQ9a60HllGjzmliP</string>
    <string name="account_information">Account Information</string>
    <string name="orders">All Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Logout</string>
    <string name="verified_profile">Verified Profile</string>
    <string name="hello">Hello</string>
    <string name="welcome_to_laza">Welcome to Laza.</string>
    <string name="choose_brand">Choose Brand</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="product_name">Adidas flow…</string>
    <string name="product_price">300$</string>
    <string name="color">color</string>
    <string name="size">Size</string>
    <string name="product_description">Description…</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="description">Description</string>
    <string name="see_less">read less</string>
    <string name="price_label">Price</string>
    <string name="OutOfStock">Out Of Stock</string>
    <string name="PleaseSelectSize">Select Size</string>
    <string name="PleaseSelectColor">Select Color</string>
    <string name="PleaseSelectColorAndSize">Select Color And Size</string>
    <string name="AddedToCart">Added To Cart</string>
    <string name="AddedToWishlist">Added to wichlist</string>
    <string name="RemovedFromWishlist">Removed from wishlist</string>
    <string name="in_wishlist">In Wishlist</string>
    <string name="egp">E£ %s</string>
    <string name="egp_">E£ </string>
    <string name="limited_deal">Limited Deal</string>
    <string name="no_reviews">No Reviews</string>
    <string name="reviews_item_count">( %1$s )</string>
    <string name="reviews_item_count_">( %1$s )</string>
    <string name="offer_text">%s%% OFF</string>
    <string name="rating_with_number">%s rating</string>

    <string name="total">Total</string>
    <string name="check_out">Check Out</string>
    <string name="your_shopping_cart_is_empty">Your Shopping Cart Is Empty</string>
    <string name="are_you_sure_you_want_delete_this_item_from_cart">Are you sure you want delete this item from cart?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="DeleteItemFromCart">Delete Item From Cart</string>
    <string name="AreYouSureYouWantToDeleteThisItemFromCart">Are you sure you want to delete this item from cart</string>
    <string name="address_location_ex_home">Address location Ex: Home</string>
    <string name="full_name">Full Name</string>
    <string name="street">Street</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="addresses">Addresses</string>
    <string name="save">Save</string>
    <string name="payment_methods">Payment Method</string>
    <string name="virtual_payments_not_avaliable_yet_coming_soon">virtual payments not available yet, Coming soon, only cash on delivery available</string>
    <string name="shipping_address">Shopping Addresses</string>
    <string name="home_address">Home</string>
    <string name="_150">150</string>
    <string name="place_order">Place Order</string>
    <string name="billing">Billing</string>
    <string name="add_review">Add Review</string>
    <string name="how_was_your_experience">How was your experience ?</string>
    <string name="hint_name">Name</string>
    <string name="describe_your_experience">Describe your experience?</string>
    <string name="submit_review">Submit Review</string>
    <string name="reviews">Reviews</string>
    <string name="view_all">View All</string>
    <string name="back_arrow">back_arrow</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="brand_image">brand_image</string>
    <string name="brand_name">Brand Name</string>
    <string name="_4_5">4.5</string>
    <string name="_45">(45)</string>
    <string name="_50_off">50% OFF</string>
    <string name="deal">Deal</string>
    <string name="_50">$50</string>
    <string name="_25">$25</string>
    <string name="brand_wishlist">brand_wishlist</string>
    <string name="no_items_found">No Items Found</string>
    <string name="arrow_back">arrow_back</string>
    <string name="qu">qu</string>
    <string name="do_you_want_to_order_your_cart_items">Do you want to order your cart items?</string>
    <string name="image_order_confirm">image_order_confirm</string>
    <string name="order_confirmation">Order Confirmed!</string>
    <string name="your_order_has_been_placed">Your order has been confirmed, we will send you confirmation email shortly.</string>
    <string name="go_to_orders">Go to Orders</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="my_account">Account Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="forgot_password_change_password">Forgot/Change Password?</string>

    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">We will send you the password reset link to your email</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="order_state">order state</string>
    <string name="_4_5_rating">4.5 rating</string>
    <string name="order_details">Order Details</string>
    <string name="address">Addresses</string>
    <string name="products">Products</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="edit_personal_detail">edit personal detail</string>
    <string name="orderss">Orders</string>
    <string name="track_orders">Track Orders</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="languages">Languages</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="english">English</string>
    <string name="arabic">Arabic (العربية)</string>
    <string name="search">Search...</string>
    <string name="please_select_color">Please select color</string>
    <string name="please_select_size">Please select size</string>
    <string name="no_internet_connection">No Internet Connection!!</string>
    <string name="g_search_now">Search Now</string>
    <string name="g_cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_this_address">Are you sure you want to delete this address?</string>
    <string name="your_reviews">Your Reviews</string>
    <string name="please_enter_your_data_to_login">Please enter your data to login</string>

</resources>