<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="500dp"
    app:cardCornerRadius="@dimen/_18sdp"
    app:cardElevation="@dimen/_2sdp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:background="@color/background_intro__card_1"
        >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/cart_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/qu"
        app:tint="@color/g_blue" />

    <TextView
        android:id="@+id/tv_alert_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:text="@string/do_you_want_to_order_your_cart_items"
        android:textSize="18sp"
        android:textColor="@color/background_intro__mentv_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:text="@string/cancel"
        style="@style/blueButtonStyle"
        app:layout_constraintEnd_toStartOf="@id/confirm_yes__button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_alert_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_yes__button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:text="@string/yes"
        app:cornerRadius="50dp"
        style="@style/redButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirm_cancel_button"
        app:layout_constraintTop_toBottomOf="@id/tv_alert_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
