<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.loginAndRegister.LoginFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/backArrow"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:src="@color/g_circle_back_arrow"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/arrow_1"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:src="@drawable/arrow___left"
        app:layout_constraintBottom_toBottomOf="@id/backArrow"
        app:layout_constraintEnd_toEndOf="@id/backArrow"
        app:layout_constraintStart_toStartOf="@id/backArrow"
        app:layout_constraintTop_toTopOf="@id/backArrow" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="115dp" />

    <TextView
        android:id="@+id/welcome_tv"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/welcome"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_h1" />

    <TextView
        android:id="@+id/plsEnterYourData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_data_to_continue"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@id/welcome_tv"
        app:layout_constraintStart_toStartOf="@id/welcome_tv"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="307dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEdEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toStartOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/guide_h2">

        <EditText
            android:id="@+id/edFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="First Name"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEdPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toStartOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutEdEmail">

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/forgot_password"
        android:textColor="@color/g_red"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@id/inputLayoutEdPassword"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutEdPassword" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="577dp" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_32sdp"
        android:paddingEnd="@dimen/_32sdp"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/or"
            android:textSize="@dimen/_12ssp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:backgroundTint="@color/g_background_google"
            app:cardCornerRadius="@dimen/_10ssp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/googleIcon"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/guideline8"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/googleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:textColor="@color/g_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/googleIcon"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="107dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/guideline_h3">

        <TextView
            android:id="@+id/termsAndConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/termsAndConditions"
            android:textSize="@dimen/_8ssp" />

        <TextView
            android:id="@+id/privacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/term_and_condition"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/g_background_twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/createAccount"
                style="@style/h3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="@dimen/_110sdp"
                android:paddingTop="@dimen/_20ssp"
                android:paddingEnd="@dimen/_110sdp"
                android:paddingBottom="@dimen/_15ssp"
                android:text="@string/sign_in"
                android:textColor="@color/g_white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>